# Orbit-WhatsApp-Chatbot

./: .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml  run.py  temp.py
alembic/: env.py
alembic/versions/: 2025_08_23_1459-d3d52cc48122_create_users_and_roles.py  2025_08_31_1236-c16985ce8af3_add_conversation_table.py  2025_08_31_1322-f8afd683b329_removed_unique_constraint_from_.py
app/: main.py
app/ai/: __init__.py  dependencies.py
app/ai/nodes/: chat_processor_node.py  handle_audio_node.py  handle_image_node.py  handle_text_node.py  send_whatsapp_message_node.py  shared.py
app/ai/prompts/: prompts.py
app/ai/schemas/: workflow_states.py
app/ai/services/: chat_service.py  checkpointer_service.py  engine_service.py  shared_pool_service.py
app/ai/workflows/: chat_workflow.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  messages.py  users.py
app/core/: config.py  dependencies.py  role_decorator.py
app/core/guards/: authorization_guard.py
app/db/: base.py  dependencies.py  session.py
app/models/: __init__.py  base.py  conversation.py  role.py  user.py  user_role.py
app/schemas/: auth.py  chat.py  user.py
app/services/: auth_service.py  conversation_service.py  user_service.py
